@@ -55,7 +55,10 @@ Options
 * ``--mirror-to``
 
   The name of the interface which should be the destination of the mirrored
-  packets. The default is ``mi<port>``.
+  packets. If the specified interface does not exist, it will be created as
+  part of the setup process. If the interface already exists, it must be a
+  port type that can be used with the ``tcpdump`` utility.  Mirror ports
+  cannot be used for normal traffic. The default value is ``mi<port>``.
 
 * ``--span``
 
